--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 
     <div class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">Foody</a>
+        <a class="navbar-brand black-text" href="">Foody</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link black-text" href="">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link black-text" href="">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link black-text" href="">Download</a>
               </li>
           </ul>
         </div>
@@ -46,7 +46,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1>Delicious food is just one click away.</h1>
+          <h1 class=" black-text">Delicious food is just one click away.</h1>
           <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-google-play"></i>Download</button>
           <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-apple"></i>Download</button>
         </div>
