--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class=" black-text">Delicious food is just one click away.</h1>
-          <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-google-play"></i>Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg"><i class="fab fa-apple"></i>Download</button>
+          <button type="button" class="btn btn-dark btn-lg download-btn"><i class="fab fa-google-play"></i>Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-btn"><i class="fab fa-apple"></i>Download</button>
         </div>
         <div class="col-lg-6">
           <img src="images/iphone6.png" id="title-img" alt="iphone-mockup">
