--- a/index.html
+++ b/index.html
@@ -62,15 +62,23 @@
   <!-- Features -->
 
   <section id="features">
-
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even when you are hungry.</p>
-
-    <h3>Elite Clientele</h3>
-    <p>We have all foods, of all great cuisines.</p>
-
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+    <div class="row">
+      <div class="col-lg-4 feature-box black-text">
+        <i class="icon fas fa-bullseye fa-4x"></i>
+        <h3>Easy to use.</h3>
+        <p>So easy to use, even when you are hungry.</p>
+      </div>
+      <div class="col-lg-4 feature-box black-text">
+        <i class="icon far fa-heart fa-4x"></i>
+        <h3>Elite Clientele</h3>
+        <p>We have all foods, of all great cuisines.</p>
+      </div>
+      <div class="col-lg-4 feature-box black-text">
+        <i class="icon far fa-check-circle fa-4x"></i>
+        <h3>Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
+    </div>
 
   </section>
 
@@ -80,12 +88,12 @@
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on Foody. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
+    <img class= "testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with Foody's help, they've found the love of their life. I think.</h2>
+    <h2 class="testimonial-text">My dog used to be so lonely, but with Foody's help, they've found the love of their life. I think.</h2>
     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    <em>Beverly, Illinois</em>
 
   </section>
 
@@ -93,10 +101,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-items" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-items" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-items" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-items" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
