--- a/index.html
+++ b/index.html
@@ -87,13 +87,31 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on Foody. Woof.</h2>
-    <img class= "testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
-
-    <h2 class="testimonial-text">My dog used to be so lonely, but with Foody's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em>
+    <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on Foody. Woof.</h2>
+          <img class= "testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with Foody's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">lorem ipsum, but with Foody's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Lorem ipsum, Illinois</em>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
 
   </section>
 
@@ -113,10 +131,48 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2>Some of our best dishes</h2>
+    <p>Made with love and delivered with care to your doorsteps.</p>
 
+    <div class="pricing-row row">
+      <div class="pricing-col col-lg-4 ">
+        <div class="card card-item">
+          <img class="card-img-top" src="images/mojito.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Mojito</h5>
+            <h3>₹150</h3>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="price-btn btn btn-block">Buy now</a>
+          </div>
+        </div>
+      </div>
+      <div class="pricing-col col-lg-4">
+        <div class="card card-item">
+          <img class="card-img-top" src="images/burger.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Burger</h5>
+            <h3>₹180</h3>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="price-btn btn btn-block">Buy now</a>
+          </div>
+        </div>
+      </div>
+      <div class="pricing-col col-lg-4">
+        <div class="card card-item">
+          <img class="card-img-top" src="images/pizza.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Pizza</h5>
+            <h3>₹230</h3>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="price-btn btn btn-block">Buy now</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
+    
+
+    
     <h3>Chihuahua</h3>
     <h2>Free</h2>
     <p>5 Matches Per Day</p>
