--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
     <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on Foody. Woof.</h2>
-          <img class= "testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <h2>Best part is that I can order food online from my favourite restaurant with ease.</h2>
+          <img class= "testimonial-image" src="images/review-img1.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonial-text">My dog used to be so lonely, but with Foody's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <h2 class="testimonial-text">You can select a range of menu easily and can get special discounts from restaurants.</h2>
+          <img class="testimonial-image" src="images/review-img2.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonial-text">lorem ipsum, but with Foody's help, they've found the love of their life. I think.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <h2 class="testimonial-text">The app is very fast. Prices are correct and not higher as in the restaurant.</h2>
+          <img class="testimonial-image" src="images/review-img3.jpg" alt="lady-profile">
           <em>Lorem ipsum, Illinois</em>
         </div>
       </div>
