--- a/index.html
+++ b/index.html
@@ -169,34 +169,6 @@
         </div>
       </div>
     </div>
-
-    
-
-    
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
   </section>
 
 
@@ -204,7 +176,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3>Find your favourite cuisine now.</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
 
@@ -215,7 +187,7 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 Foody</p>
+    <p>© Copyright 2020 Foody</p>
 
   </footer>
 
