--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" href="#">
           <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link black-text" href="">Contact</a>
+                <a class="nav-link black-text" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link black-text" href="">Pricing</a>
+                <a class="nav-link black-text" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link black-text" href="">Download</a>
+                <a class="nav-link black-text" href="#cta">Download</a>
               </li>
           </ul>
         </div>
@@ -176,9 +176,9 @@
 
   <section id="cta">
 
-    <h3>Find your favourite cuisine now.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find your favourite cuisine now.</h3>
+    <button type="button" class="btn btn-large btn-dark download-btn"><i class="fab fa-google-play"></i>Download</button>
+    <button type="button" class="btn btn-large btn-light download-btn"><i class="fab fa-apple"></i>Download</button>
 
   </section>
 
@@ -188,6 +188,10 @@
   <footer id="footer">
 
     <p>© Copyright 2020 Foody</p>
+    <i class="social-icon fab fa-facebook-f fa-2x"></i>
+    <i class="social-icon fab fa-twitter fa-2x"></i>
+    <i class="social-icon fab fa-instagram fa-2x"></i>
+    <i class="social-icon far fa-envelope fa-2x"></i>
 
   </footer>
 
