--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <div class="pricing-row row">
       <div class="pricing-col col-lg-4 ">
-        <div class="card card-item">
+        <div class="card">
           <img class="card-img-top" src="images/mojito.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Mojito</h5>
@@ -147,7 +147,7 @@
         </div>
       </div>
       <div class="pricing-col col-lg-4">
-        <div class="card card-item">
+        <div class="card">
           <img class="card-img-top" src="images/burger.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Burger</h5>
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="pricing-col col-lg-4">
-        <div class="card card-item">
+        <div class="card">
           <img class="card-img-top" src="images/pizza.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Pizza</h5>
@@ -177,8 +177,8 @@
   <section id="cta">
 
     <h3 class="cta-heading">Find your favourite cuisine now.</h3>
-    <button type="button" class="btn btn-large btn-dark download-btn"><i class="fab fa-google-play"></i>Download</button>
-    <button type="button" class="btn btn-large btn-light download-btn"><i class="fab fa-apple"></i>Download</button>
+    <button type="button" class="btn btn-lg btn-dark download-btn"><i class="fab fa-google-play"></i>Download</button>
+    <button type="button" class="btn btn-lg btn-light download-btn"><i class="fab fa-apple"></i>Download</button>
 
   </section>
 
